--- a/index.html
+++ b/index.html
@@ -731,5 +731,6 @@
             fetchAllStories(); // Fetch all stories on page load
         });
     </script>
+  <script type='text/javascript' src='//pl27093314.profitableratecpm.com/fa/77/8c/fa778c656545a5105858d9d11511d106.js'></script>
 </body>
 </html>
