--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
   <meta name="author" content="Perpustakaan Digital" />
   <meta name="robots" content="index, follow" />
   <script type="application/ld+json">
+    
 {
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Koleksi Cerita",
   "alternateName": "AMDF.GROUP",
   "url": "https://amdf.web.id",
-  "logo": "https://amdf.web.id/logo.png",
+  "logo": "https://amdf.web.id/favicon.ico",
   "description": "Website ini dibuat oleh siswa SMK Teknik Elektronika, berisi ebook dan kumpulan cerita fantasi dari berbagai creator pelajar.",
   "email": "info@amdf.web.id",
   "sameAs": [
     "https://www.instagram.com/willtorya_?igsh=MWNlc2lqb2RycDFrNA=="
   ]
 }
+    
 </script>
 <style>
     :root {
